# CdC_spectrum

./: .gitmodules  CMakeLists.txt  README.md
include/: main.h  ui.h  ui_init.h
lib/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
src/: CMakeLists.txt  main.c  ui.c  ui_init.c
